--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,14 @@ custom_resumes/
 *.tmp
 *.bak
 *~
+output.pdf
+
+# Ignore system files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
 
 # Ignore Python cache
 __pycache__/
